- Added 2 more villager trading bookmark groups.   * The new groups are disabled by default and can be enabled in `Mod Settings`   * You can also assign shortcuts in `Hotkeys` - Added support for **Easy Villagers**.   * All forge versions now support the trading blocks of **Easy Villagers**